--- a/Fooddelivery/style.css
+++ b/Fooddelivery/style.css
@@ -35,18 +35,17 @@ section {
 }
 
 .about-restaurant {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px!
     text-align: center; 
+    margin-top: 20px;
 }
 
 .restaurant-about-img {
-    width: 150px;
-    height: auto;
-    margin-right: 20px;
-    max-width:100;
+    display: block;
+    margin: 0 auto; 
+    width: 100%; 
+    max-width: 400px; 
+    height: auto; 
+    margin-bottom: 20px;
 }
 
 .restaurant-card {
